# hw_7_se

./: config.ini  my_select.py  pyproject.toml
conf/: db.py  models.py
migrations/versions/: bf2531187ff0_init.py
seeds/: seed.py
