[tool.poetry]
name = "hw-7"
version = "0.1.0"
description = ""
authors = ["Alex <alexsa1995@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.36"
psycopg2 = "^2.9.10"
alembic = "^1.14.0"
poetry = "^1.8.4"
faker = "^33.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
